# fripper

./: .gitignore  README.md  __main__.py  pyproject.toml  requirements.txt
docs/: fripper.deduper.html  index.html
src/frame_analysis/: __main__.py  grabber.py  preview.py  splitter.py  utils.py
src/frame_analysis/ffmpeg_cmd/: __init__.py  __main__.py
src/frame_grabber/: __main__.py
src/frame_splitter/: __main__.py
src/fripper/: __main__.py  deduper.py  preview.py  splitter.py
src/fripper/ffmpeg_cmd/: __init__.py  __main__.py  utils.py
