[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame_analysis"
version = "0.1"
dependencies = [
  "opencv-python==4.11.0.86"
]

[project.scripts]
run_frames = "frame_splitter.__main__:main"
grab_frame = "frame_grabber.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

